redid package structure

--- a/linear_slider_description/CMakeLists.txt
+++ b/linear_slider_description/CMakeLists.txt
@@ -1,11 +1,21 @@
 cmake_minimum_required(VERSION 3.22)
-project(linear-slider)
+project(linear_slider_description)
 
 find_package(ament_cmake REQUIRED)
+find_package(xacro REQUIRED)
+find_package(urdf REQUIRED)
+
+install(
+  DIRECTORY
+    meshes
+    urdf
+    config
+    rviz
+  DESTINATION share/${PROJECT_NAME}
+)
 
 ament_package()
 
 install(DIRECTORY launch DESTINATION share/${PROJECT_NAME}
   PATTERN "setup_assistant.launch" EXCLUDE)
-install(DIRECTORY config DESTINATION share/${PROJECT_NAME})
 install(FILES .setup_assistant DESTINATION share/${PROJECT_NAME})
