--- a/linear_slider_description/package.xml
+++ b/linear_slider_description/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>linear-slider</name>
+  <name>linear_slider_description</name>
   <version>0.3.0</version>
   <description>
      An automatically generated package with all the configuration and launch files for using the linear_slider with the MoveIt Motion Planning Framework
@@ -31,7 +31,7 @@
   <!-- <exec_depend>joint_trajectory_controller</exec_depend> -->
   <!-- <exec_depend>gazebo_ros_control</exec_depend> -->
   <exec_depend>controller_manager</exec_depend>
-  <exec_depend>linear-slider</exec_depend>
+  <!-- <exec_depend>linear-slider</exec_depend> -->
   <exec_depend>moveit_configs_utils</exec_depend>
   <exec_depend>moveit_ros_move_group</exec_depend>
   <exec_depend>moveit_ros_visualization</exec_depend>
