--- a/linear_slider_controller/package.xml
+++ b/linear_slider_controller/package.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>linear_slider_control</name>
+  <name>linear_slider_controller</name>
   <version>0.0.0</version>
-  <description>Linear slider control node</description>
+  <description>Linear slider hardware interface</description>
   <maintainer email="strohbel@oregonstate.edu">Luke Strohbehn</maintainer>
-  <url type="repository">https://github.com/lukestroh/linear-slider</url>
-  <url type="bugtracker">https://github.com/lukestroh/linear-slider/issues</url>
   <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>controller_interface</depend>
+  <depend>hardware_interface</depend>
+  <depend>realtime_tools</depend>
   <depend>rclcpp</depend>
-  <depend>controller_manager</depend>
+  <depend>rclcpp_lifecycle</depend>
+
+  <build_depend>pluginlib</build_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
