have a bug where my class does not overwrite systeminterface virtual functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,14 @@
         "*.tcc": "cpp",
         "sstream": "cpp",
         "socket": "cpp",
-        "functional": "cpp"
+        "functional": "cpp",
+        "buffer": "cpp",
+        "io_context": "cpp",
+        "memory_resource": "cpp",
+        "fstream": "cpp",
+        "ostream": "cpp",
+        "shared_mutex": "cpp",
+        "stop_token": "cpp",
+        "streambuf": "cpp"
     }
 }
