--- a/linear_slider_controller/package.xml
+++ b/linear_slider_controller/package.xml
@@ -14,8 +14,9 @@
   <depend>realtime_tools</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_lifecycle</depend>
+  <depend>pluginlib</depend>
 
-  <build_depend>pluginlib</build_depend>
+  <!-- <build_depend>pluginlib</build_depend> -->
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
