--- a/linear_slider_controllers/package.xml
+++ b/linear_slider_controllers/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>linear_slider_control</name>
+  <name>linear_slider_controllers</name>
   <version>0.0.0</version>
   <description>Linear slider control node</description>
   <maintainer email="strohbel@oregonstate.edu">Luke Strohbehn</maintainer>
