fixed some issues in description package. Added base for bringup package

--- a/linear_slider_description/CMakeLists.txt
+++ b/linear_slider_description/CMakeLists.txt
@@ -4,6 +4,7 @@ project(linear_slider_description)
 find_package(ament_cmake REQUIRED)
 find_package(xacro REQUIRED)
 find_package(urdf REQUIRED)
+# find_package(rviz REQUIRED)
 
 install(
   DIRECTORY
