--- a/linear_slider_bringup/package.xml
+++ b/linear_slider_bringup/package.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>linear_slider_controllers</name>
+  <name>linear_slider_bringup</name>
   <version>0.0.0</version>
-  <description>Linear slider control node</description>
+  <description>Bringup package for the linear slider</description>
   <maintainer email="strohbel@oregonstate.edu">Luke Strohbehn</maintainer>
-  <url type="repository">https://github.com/lukestroh/linear-slider</url>
-  <url type="bugtracker">https://github.com/lukestroh/linear-slider/issues</url>
   <license>BSD-3-Clause</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>rclcpp</depend>
-  <depend>controller_manager</depend>
-
+  <exec_depend>linear_slider_description</exec_depend>
+  <exec_depend>controller_manager</exec_depend>
+  <exec_depend>joint_state_broadcaster</exec_depend>
+  <exec_depend>joint_trajectory_controller</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>ros2_controllers_test_nodes</exec_depend>
   <exec_depend>rviz2</exec_depend>
-
+  <exec_depend>xacro</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
