--- a/linear_slider_description/package.xml
+++ b/linear_slider_description/package.xml
@@ -8,11 +8,11 @@
   </description>
   <maintainer email="strohbel@oregonstate.edu">Luke Strohbehn</maintainer>
 
-  <license>BSD</license>
+  <license>BSD-3-Clause</license>
 
   <url type="website">http://moveit.ros.org/</url>
-  <url type="bugtracker">https://github.com/ros-planning/moveit2/issues</url>
-  <url type="repository">https://github.com/ros-planning/moveit2</url>
+  <url type="repository">https://github.com/lukestroh/linear-slider</url>
+  <url type="bugtracker">https://github.com/lukestroh/linear-slider/issues</url>
 
   <author email="strohbel@oregonstate.edu">Luke Strohbehn</author>
 
