--- a/linear_slider_bringup/config/linear_slider_controllers.yaml
+++ b/linear_slider_bringup/config/linear_slider_controllers.yaml
@@ -22,10 +22,12 @@ joint_trajectory_controller:
       - position
       - velocity
 
-    state_publish_rate: 50 # defaults to 50
-    action_monitor_rate: 20 # defaults to 20
+    state_publish_rate: 50.0 # defaults to 50
+    action_monitor_rate: 20.0 # defaults to 20
 
     allow_partial_joints_goal: false # defaults to false
     constraints:
       stopped_velocity_tolerance: 0.01 # Defaults to 0.01
       goal_time: 0.0 # defaults to 0.0 (start immediately)
+      
+    allow_nonzero_velocity_at_trajectory_end: false
