changed a joint name. Still need to fix bringup package for controller default parameters

--- a/linear_slider_bringup/config/test_goal_publishers_config.yaml
+++ b/linear_slider_bringup/config/test_goal_publishers_config.yaml
@@ -24,4 +24,4 @@ publisher_joint_trajectory_controller:
       velocities: [-0.05] # move to the left (toward motor)
 
     joints:
-      - base_platform_prismatic_joint
+      - joint1
