--- a/linear_slider_bringup/config/linear_slider_controllers.yaml
+++ b/linear_slider_bringup/config/linear_slider_controllers.yaml
@@ -2,17 +2,30 @@ controller_manager:
   ros__parameters:
     update_rate: 10 # hz
 
-    joint_state_broacaster:
+    joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
     joint_trajectory_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
+# joint_state_broadcaster:
+#   ros__parameters:
+#     joints:
+#       - joint1
+
+#     interfaces:
+#       - position
+#       - velocity
+
+#     map_interface_to_joint_state:
+#       position: position
+#       velocity: velocity
+
 # Make sure this matches up with the URDF
 joint_trajectory_controller:
   ros__parameters:
     joints:
-      - base_platform_prismatic_joint
+      - joint1
 
     command_interfaces:
       - position
