--- a/linear_slider_moveit/config/initial_positions.yaml
+++ b/linear_slider_moveit/config/initial_positions.yaml
@@ -1,4 +1,4 @@
 # Default initial positions for linear_slider's ros2_control fake system
 
 initial_positions:
-  base_platform_prismatic_joint: 0
+  joint1: 0
