--- a/linear_slider_bringup/config/linear_slider_controllers.yaml
+++ b/linear_slider_bringup/config/linear_slider_controllers.yaml
@@ -5,21 +5,31 @@ controller_manager:
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
-    joint_trajectory_controller:
-      type: joint_trajectory_controller/JointTrajectoryController
+    # joint_velocity_controller:
+    #   type: velocity_controllers/JointGroupVelocityController
 
-# joint_state_broadcaster:
+# joint_velocity_controller:
 #   ros__parameters:
+#     type: velocity_controllers/JointGroupVelocityController
 #     joints:
 #       - joint1
+    joint_trajectory_controller:
+      type: joint_trajectory_controller/JointTrajectoryController
+      # TODO: Therefore if the hardware provides only acceleration or velocity states they have to be integrated in the hardware-interface implementation of velocity and position to use these controllers.
 
-#     interfaces:
-#       - position
-#       - velocity
+joint_state_broadcaster:
+  ros__parameters:
+    joints:
+      - joint1
 
-#     map_interface_to_joint_state:
-#       position: position
-#       velocity: velocity
+    interfaces:
+      - position
+      - velocity
+
+    map_interface_to_joint_state:
+      position: position
+      velocity: velocity
+
 
 # Make sure this matches up with the URDF
 joint_trajectory_controller:
@@ -28,7 +38,7 @@ joint_trajectory_controller:
       - joint1
 
     command_interfaces:
-      - position
+      # - position
       - velocity
 
     state_interfaces:
