--- a/linear_slider_bringup/package.xml
+++ b/linear_slider_bringup/package.xml
@@ -11,8 +11,10 @@
 
   <exec_depend>linear_slider_description</exec_depend>
   <exec_depend>controller_manager</exec_depend>
+  <exec_depend>controller_manager_msgs</exec_depend>
   <exec_depend>joint_state_broadcaster</exec_depend>
-  <exec_depend>joint_trajectory_controller</exec_depend>
+  <exec_depend>joint_trajectory_controller</exec_depend> <!-- TODO: delete -->
+  <exec_depend>velocity_controllers</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>ros2_controllers_test_nodes</exec_depend>
   <exec_depend>rviz2</exec_depend>
