--- a/linear_slider_bringup/config/linear_slider_controllers.yaml
+++ b/linear_slider_bringup/config/linear_slider_controllers.yaml
@@ -2,9 +2,6 @@ controller_manager:
   ros__parameters:
     update_rate: 13 # hz
 
-    joint_state_broadcaster:
-      type: joint_state_broadcaster/JointStateBroadcaster
-
     # joint_velocity_controller:
     #   type: velocity_controllers/JointGroupVelocityController
 
@@ -17,18 +14,22 @@ controller_manager:
       type: joint_trajectory_controller/JointTrajectoryController
       # TODO: Therefore if the hardware provides only acceleration or velocity states they have to be integrated in the hardware-interface implementation of velocity and position to use these controllers.
 
-joint_state_broadcaster:
-  ros__parameters:
-    joints:
-      - joint1
+    joint_state_broadcaster:
+      type: joint_state_broadcaster/JointStateBroadcaster
 
-    interfaces:
-      - position
-      - velocity
 
-    map_interface_to_joint_state:
-      position: position
-      velocity: velocity
+# joint_state_broadcaster:
+#   ros__parameters:
+#     joints:
+#       - joint1
+
+#     interfaces:
+#       - position
+#       - velocity
+
+#     map_interface_to_joint_state:
+#       position: position
+#       velocity: velocity
 
 
 # Make sure this matches up with the URDF
