--- a/linear_slider_description/config/joint_limits.yaml
+++ b/linear_slider_description/config/joint_limits.yaml
@@ -12,4 +12,4 @@ joint_limits:
     has_velocity_limits: true
     max_velocity: 0.25
     has_acceleration_limits: false
-    max_acceleration: 0
+    # max_acceleration: 0
