--- a/linear_slider_description/config/joint_limits.yaml
+++ b/linear_slider_description/config/joint_limits.yaml
@@ -8,8 +8,8 @@ default_acceleration_scaling_factor: 0.1
 # Specific joint properties can be changed with the keys [max_position, min_position, max_velocity, max_acceleration]
 # Joint limits can be turned off with [has_velocity_limits, has_acceleration_limits]
 joint_limits:
-  ls_base_link_ls_moving_base_joint:
+  joint1:
     has_velocity_limits: true
-    max_velocity: 0.25
+    max_velocity: 0.5
     has_acceleration_limits: false
-    # max_acceleration: 0
+    max_acceleration: 0.2
