--- a/linear_slider_controllers/CMakeLists.txt
+++ b/linear_slider_controllers/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 3.8)
 project(linear_slider_controllers)
 
-# Default to C99
-if(NOT CMAKE_C_STANDARD)
-  set(CMAKE_C_STANDARD 99)
-endif()
+# # Default to C99
+# if(NOT CMAKE_C_STANDARD)
+#   set(CMAKE_C_STANDARD 99)
+# endif()
 
-# Default to C++14
-if(NOT CMAKE_CXX_STANDARD)
-  set(CMAKE_CXX_STANDARD 14)
-endif()
+# # Default to C++14
+# if(NOT CMAKE_CXX_STANDARD)
+#   set(CMAKE_CXX_STANDARD 14)
+# endif()
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -21,13 +21,13 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 # find_package(rclcpp REQUIRED)
-find_package(rclcpp_lifecycle REQUIRED)
-find_package(controller_manager REQUIRED)
-find_package(joint_trajectory_controller REQUIRED)
-find_package(velocity_controllers REQUIRED)
-find_package(lifecycle_msgs REQUIRED)
-find_package(rclcpp_lifecycle REQUIRED)
-find_package(pluginlib REQUIRED)
+# find_package(rclcpp_lifecycle REQUIRED)
+# find_package(controller_manager REQUIRED)
+# find_package(joint_trajectory_controller REQUIRED)
+# find_package(velocity_controllers REQUIRED)
+# find_package(lifecycle_msgs REQUIRED)
+# find_package(rclcpp_lifecycle REQUIRED)
+# find_package(pluginlib REQUIRED)
 
 # add_executable(linear_slider_control_node src/linear_slider_control_node.cpp)
 
@@ -38,10 +38,10 @@ find_package(pluginlib REQUIRED)
 
 # )
 
-install(TARGETS
-  # linear_slider_control_node
-  DESTINATION lib/${PROJECT_NAME}
-)
+# install(TARGETS
+#   # linear_slider_control_node
+#   DESTINATION lib/${PROJECT_NAME}
+# )
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
