--- a/linear_slider_moveit/config/moveit_controllers.yaml
+++ b/linear_slider_moveit/config/moveit_controllers.yaml
@@ -4,13 +4,11 @@ moveit_controller_manager: moveit_simple_controller_manager/MoveItSimpleControll
 
 moveit_simple_controller_manager:
   controller_names:
-    - joint1_planning_group_controller
+    - moving_base_controller
 
-  joint1_planning_group_controller:
+  moving_base_controller:
     type: FollowJointTrajectory
     action_ns: follow_joint_trajectory
     default: true
     joints:
       - joint1
-    action_ns: follow_joint_trajectory
-    default: true
