--- a/linear_slider_bringup/config/linear_slider_controllers.yaml
+++ b/linear_slider_bringup/config/linear_slider_controllers.yaml
@@ -27,14 +27,16 @@ joint_trajectory_controller:
       - joint1
 
     command_interfaces:
-      - position
-      # - velocity
+      # - position
+      - velocity
 
     state_interfaces:
       - position
-      # - velocity
+      - velocity
 
-    
+    gains:
+      joint1:
+        ff_velocity_scale: 1.0
 
     state_publish_rate: 50.0 # defaults to 50
     action_monitor_rate: 21.0 # defaults to 20
