--- a/linear_slider_hardware_interface/package.xml
+++ b/linear_slider_hardware_interface/package.xml
@@ -17,11 +17,14 @@
   <depend>rclcpp</depend>
   <depend>rclcpp_lifecycle</depend>
   <depend>pluginlib</depend>
+  <depend>jsoncpp</depend>
+
 
   <!-- <build_depend>pluginlib</build_depend> -->
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+
 
   <export>
     <build_type>ament_cmake</build_type>
