trying to add a lifecycle node for launch, and a publisher for the linear slider system interface. neither is working...

--- a/linear_slider_bringup/CMakeLists.txt
+++ b/linear_slider_bringup/CMakeLists.txt
@@ -7,14 +7,24 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(xacro REQUIRED) # TODO: can be deleted
-find_package(urdf REQUIRED) # TODO: can be deleted
+find_package(ament_cmake_python REQUIRED)
+find_package(rclpy REQUIRED)
+
+
+# Install Python modules
+ament_python_install_package(${PROJECT_NAME})
 
 install(
-  DIRECTORY config launch
+  DIRECTORY config launch scripts
   DESTINATION share/${PROJECT_NAME}
 )
 
+# Install Python executables
+install(
+  PROGRAMS
+  scripts/delay_joint_state_broadcaster_lifecycle_node.py
+  DESTINATION lib/${PROJECT_NAME}
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
