--- a/linear_slider_bringup/package.xml
+++ b/linear_slider_bringup/package.xml
@@ -8,6 +8,9 @@
   <license>BSD-3-Clause</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
+
+  <exec_depend>rclpy</exec_depend>
 
   <exec_depend>linear_slider_description</exec_depend>
   <exec_depend>controller_manager</exec_depend>
