--- a/linear_slider_bringup/config/linear_slider_controllers.yaml
+++ b/linear_slider_bringup/config/linear_slider_controllers.yaml
@@ -12,7 +12,7 @@ controller_manager:
 joint_trajectory_controller:
   ros__parameters:
     joints:
-      - joint1
+      - $(var prefix)joint1
 
     command_interfaces:
       # - position
@@ -23,7 +23,7 @@ joint_trajectory_controller:
       - velocity
 
     gains: # required for velocity interface
-      joint1:
+      $(var prefix)joint1:
         ff_velocity_scale: 1.0
         p: 10.0 
         i: 2.0
@@ -37,7 +37,7 @@ joint_trajectory_controller:
     constraints:
       goal_time: 5.0 # defaults to 0.0 (start immediately)
       stopped_velocity_tolerance: 0.0 # Defaults to 0.01\
-      joint1:
+      $(var prefix)joint1:
         goal: 0.01 # position tolerace
 
     allow_nonzero_velocity_at_trajectory_end: false
