--- a/linear_slider_moveit/CMakeLists.txt
+++ b/linear_slider_moveit/CMakeLists.txt
@@ -2,10 +2,14 @@ cmake_minimum_required(VERSION 3.22)
 project(linear_slider_moveit)
 
 find_package(ament_cmake REQUIRED)
+find_package(ament_cmake_python REQUIRED)
+
+ament_python_install_package(${PROJECT_NAME})
 
 ament_package()
 
 install(DIRECTORY launch DESTINATION share/${PROJECT_NAME}
   PATTERN "setup_assistant.launch" EXCLUDE)
 install(DIRECTORY config DESTINATION share/${PROJECT_NAME})
+install(DIRECTORY srdf DESTINATION share/${PROJECT_NAME})
 install(FILES .setup_assistant DESTINATION share/${PROJECT_NAME})
