--- a/linear_slider_moveit/config/initial_positions.yaml
+++ b/linear_slider_moveit/config/initial_positions.yaml
@@ -1,4 +1,4 @@
-# Default initial positions for linear_slider's ros2_control fake system
+# Default initial positions for ur_with_linear_slider's ros2_control fake system
 
 initial_positions:
-  joint1: 0
+  linear_slider/joint1: 0
