--- a/linear_slider_moveit/config/joint_limits.yaml
+++ b/linear_slider_moveit/config/joint_limits.yaml
@@ -8,7 +8,9 @@ default_acceleration_scaling_factor: 0.1
 # Specific joint properties can be changed with the keys [max_position, min_position, max_velocity, max_acceleration]
 # Joint limits can be turned off with [has_velocity_limits, has_acceleration_limits]
 joint_limits:
-  joint1:
+  $(var prefix)joint1:
+    max_position: 0.45
+    min_position: -0.45
     has_velocity_limits: true
     max_velocity: 0.25
     has_acceleration_limits: false
