--- a/linear_slider_moveit/config/moveit_controllers.yaml
+++ b/linear_slider_moveit/config/moveit_controllers.yaml
@@ -4,11 +4,11 @@ moveit_controller_manager: moveit_simple_controller_manager/MoveItSimpleControll
 
 moveit_simple_controller_manager:
   controller_names:
-    - moving_base_controller
+    - linear_slider_controller
 
-  moving_base_controller:
+  linear_slider_controller:
     type: FollowJointTrajectory
     action_ns: follow_joint_trajectory
     default: true
     joints:
-      - joint1
+      - linear_slider/joint1
