--- a/linear_slider_controllers/package.xml
+++ b/linear_slider_controllers/package.xml
@@ -11,10 +11,23 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>rclcpp</depend>
-  <depend>controller_manager</depend>
 
   <exec_depend>rviz2</exec_depend>
+
+  <depend>ament_cmake</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_lifecycle</depend>
+  <depend>lifecycle_msgs</depend>
+  <depend>angles</depend>
+  <depend>rcutils</depend>
+  <depend>realtime_tools</depend>
+  <depend>ur_dashboard_msgs</depend>
+  <depend>ur_msgs</depend>
+  <depend>trajectory_msgs</depend>
+  <depend>generate_parameter_library</depend>
+  <depend>controller_manager</depend>
+  <depend>controller_interface</depend>
+  <depend>joint_trajectory_controller</depend>
 
 
   <test_depend>ament_lint_auto</test_depend>
