--- a/linear_slider_moveit/CMakeLists.txt
+++ b/linear_slider_moveit/CMakeLists.txt
@@ -3,6 +3,7 @@ project(linear_slider_moveit)
 
 find_package(ament_cmake REQUIRED)
 find_package(ament_cmake_python REQUIRED)
+find_package(rviz_default_plugins REQUIRED)
 
 ament_python_install_package(${PROJECT_NAME})
 
@@ -11,5 +12,6 @@ ament_package()
 install(DIRECTORY launch DESTINATION share/${PROJECT_NAME}
   PATTERN "setup_assistant.launch" EXCLUDE)
 install(DIRECTORY config DESTINATION share/${PROJECT_NAME})
+install(DIRECTORY config/tmp DESTINATION share/config/${PROJECT_NAME})
 install(DIRECTORY srdf DESTINATION share/${PROJECT_NAME})
 install(FILES .setup_assistant DESTINATION share/${PROJECT_NAME})
