--- a/linear_slider_moveit/config/linear_slider_servo.yaml
+++ b/linear_slider_moveit/config/linear_slider_servo.yaml
@@ -37,12 +37,12 @@ low_pass_filter_coeff: 10.0  # Larger --> trust the filtered data more, trust th
 
 ## MoveIt properties
 # move_group_name:  ur_manipulator  # Often 'manipulator' or 'arm'
-move_group_name: linear_slider_manipulator
-planning_frame: base_link  # The MoveIt planning frame. Often 'base_link' or 'world'
+move_group_name: $(var prefix)manipulator
+planning_frame: $(var prefix)base_link  # The MoveIt planning frame. Often 'base_link' or 'world'
 
 ## Other frames
-ee_frame: tool0  # The name of the end effector link, used to return the EE pose
-robot_link_command_frame:  tool0  # commands must be given in the frame of a robot link. Usually either the base or end effector
+ee_frame: $(var prefix)tool0  # The name of the end effector link, used to return the EE pose
+robot_link_command_frame:  $(var prefix)tool0  # commands must be given in the frame of a robot link. Usually either the base or end effector
 
 ## Stopping behaviour
 incoming_command_timeout:  0.1  # Stop servoing if X seconds elapse without a new command
