--- a/linear_slider_bringup/package.xml
+++ b/linear_slider_bringup/package.xml
@@ -22,6 +22,10 @@
   <exec_depend>ros2_controllers_test_nodes</exec_depend>
   <exec_depend>gazebo_ros2_control</exec_depend>
 
+  <exec_depend>builtin_interfaces</exec_depend>
+  <exec_depend>rosgraph_msgs</exec_depend>
+
+
   <exec_depend>rviz2</exec_depend>
   <exec_depend>xacro</exec_depend>
 
