--- a/linear_slider_moveit_config/CMakeLists.txt
+++ b/linear_slider_moveit_config/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.22)
-project(linear_slider_moveit)
+project(linear_slider_moveit_config)
 
 find_package(ament_cmake REQUIRED)
 find_package(ament_cmake_python REQUIRED)
