--- a/linear_slider_bringup/config/linear_slider_controllers.yaml
+++ b/linear_slider_bringup/config/linear_slider_controllers.yaml
@@ -25,20 +25,20 @@ linear_slider_controller:
       $(var prefix)joint1:
         ff_velocity_scale: 1.0
         p: 10.0 
-        i: 2.0
-        d: 5.0
+        i: 0.1
+        d: 0.1
         # i_clamp: 1.0
 
-    state_publish_rate: 50.0 # defaults to 50
-    action_monitor_rate: 20.0 # defaults to 20
+    state_publish_rate: 100.0 # defaults to 50
+    action_monitor_rate: 50.0 # defaults to 20
 
     allow_partial_joints_goal: false # defaults to false
     constraints:
       goal_time: 0.0 # defaults to 0.0 (start immediately)
-      stopped_velocity_tolerance: 0.00 # Defaults to 0.01\
+      stopped_velocity_tolerance: 0.01 # Defaults to 0.01
       $(var prefix)joint1:
-        goal: 0.0 # position tolerace
-        trajectory: 0.5
+        goal: 0.05 # position tolerace
+        # trajectory: 0.05
 
     allow_nonzero_velocity_at_trajectory_end: false
 
