--- a/linear_slider_moveit_config/config/moveit_controllers.yaml
+++ b/linear_slider_moveit_config/config/moveit_controllers.yaml
@@ -5,6 +5,14 @@ moveit_controller_manager: moveit_simple_controller_manager/MoveItSimpleControll
 moveit_simple_controller_manager:
   controller_names:
     - linear_slider_controller
+    - scaled_joint_trajectory_controller
+
+  scaled_joint_trajectory_controller:
+    action_ns: follow_joint_trajectory
+    type: FollowJointTrajectory
+    default: false
+    joints:
+      - $(var prefix)joint1
 
   linear_slider_controller:
     type: FollowJointTrajectory
