--- a/linear_slider_bringup/config/linear_slider_controllers.yaml
+++ b/linear_slider_bringup/config/linear_slider_controllers.yaml
@@ -25,8 +25,8 @@ linear_slider_controller:
       $(var prefix)joint1:
         ff_velocity_scale: 1.0
         p: 10.0 
-        i: 0.1
-        d: 0.1
+        i: 2.0
+        d: 5.0
         # i_clamp: 1.0
 
     state_publish_rate: 100.0 # defaults to 50
@@ -38,7 +38,7 @@ linear_slider_controller:
       stopped_velocity_tolerance: 0.01 # Defaults to 0.01
       $(var prefix)joint1:
         goal: 0.05 # position tolerace
-        # trajectory: 0.05
+        # trajectory: 0.05 # trajectory tolerance
 
     allow_nonzero_velocity_at_trajectory_end: false
 
