--- a/linear_slider_bringup/config/linear_slider_controllers.yaml
+++ b/linear_slider_bringup/config/linear_slider_controllers.yaml
@@ -24,20 +24,21 @@ linear_slider_controller:
     gains: # required for velocity interface
       $(var prefix)joint1:
         ff_velocity_scale: 1.0
-        p: 10.0 
+        p: 6.0 
         i: 2.0
-        d: 5.0
+        d: 2.0
         # i_clamp: 1.0
 
     state_publish_rate: 100.0 # defaults to 50
     action_monitor_rate: 50.0 # defaults to 20
 
     allow_partial_joints_goal: false # defaults to false
-    # constraints:
+    # stop_trajectory_duration: 0.1
+    constraints:
     #     goal_time: 0.0 # defaults to 0.0 (start immediately)
-    #     stopped_velocity_tolerance: 0.001 # Defaults to 0.01
-    #     $(var prefix)joint1:
-    #       goal: 0.5 # position tolerace (m)
+        stopped_velocity_tolerance: 0.01 # Defaults to 0.01
+        $(var prefix)joint1:
+          goal: 0.01 # position tolerace (m)
     #       trajectory: 1.0
 
     allow_nonzero_velocity_at_trajectory_end: false
