--- a/linear_slider_bringup/config/linear_slider_controllers.yaml
+++ b/linear_slider_bringup/config/linear_slider_controllers.yaml
@@ -9,8 +9,8 @@ controller_manager:
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
-    limit_switch_broadcaster:
-      type: std_msgs/Bool
+    limit_switch_state_broadcaster:
+      type: linear_slider_controllers/LimitSwitchStateBroadcaster
 
 linear_slider_controller:
   ros__parameters:
@@ -36,7 +36,7 @@ linear_slider_controller:
         # i_clamp: 1.0
 
     state_publish_rate: 100.0 # defaults to 50
-    action_monitor_rate: 50.0 # defaults to 20
+    action_monitor_rate: 30.0 # defaults to 20
 
     allow_partial_joints_goal: false # defaults to false
     # stop_trajectory_duration: 0.1
@@ -49,8 +49,15 @@ linear_slider_controller:
 
     allow_nonzero_velocity_at_trajectory_end: false
 
-limit_switch_broadcaster:
+limit_switch_state_broadcaster:
   ros__parameters:
     state_interfaces:
-      - name: $(var prefix)lim_switch_neg/switch_val
-      - name: $(var prefix)lim_switch_pos/switch_val
+      - name: $(var prefix)lim_switch_neg/state
+      - name: $(var prefix)lim_switch_pos/state
+
+joint_state_broadcaster:
+  ros__parameters:
+    joints:
+#       - $(var prefix)lim_switch_neg
+#       - $(var prefix)lim_switch_pos
+      - $(var prefix)joint1
