--- a/linear_slider_msgs/CMakeLists.txt
+++ b/linear_slider_msgs/CMakeLists.txt
@@ -17,6 +17,7 @@ set(msg_files
 rosidl_generate_interfaces(
     ${PROJECT_NAME}
     ${msg_files}
+    DEPENDENCIES std_msgs
 )
 
 ament_export_dependencies(rosidl_default_runtime)
