--- a/linear_slider_moveit_config/config/linear_slider_servo.yaml
+++ b/linear_slider_moveit_config/config/linear_slider_servo.yaml
@@ -53,8 +53,16 @@ num_outgoing_halt_msgs_to_publish: 4
 ## Configure handling of singularities and joint limits
 lower_singularity_threshold:  100.0  # Start decelerating when the condition number hits this (close to singularity)
 hard_stop_singularity_threshold: 200.0 # Stop when the condition number hits this
-joint_limit_margin: 0.1 # added as a buffer to joint limits [radians]. If moving quickly, make this larger.
-
+joint_limit_margin: [0.1] # added as a buffer to joint limits [radians]. If moving quickly, make this larger.
+joint_limit_margins: [0.1]
+# joint_limit_margins: { 
+#   type: double_array, 
+#   default_value: [0.1], 
+#   description: "Added as a buffer to joint limits [radians]. If moving quickly, make this larger.", 
+#   validation: { 
+#     lower_element_bounds<>: 0.0 
+#   } 
+# } 
 ## Topic names
 cartesian_command_in_topic: ~/delta_twist_cmds  # Topic for incoming Cartesian twist commands
 joint_command_in_topic: ~/delta_joint_cmds # Topic for incoming joint angle commands
