attempted to get both hardwares running with mock/real systems. Both do not work. Began moving bringup launch file into moveitconfigsbuilder

--- a/ur_with_linear_slider_moveit_config/config/moveit_controllers.yaml
+++ b/ur_with_linear_slider_moveit_config/config/moveit_controllers.yaml
@@ -11,7 +11,7 @@ controller_names:
 linear_slider_controller:
   type: FollowJointTrajectory
   action_ns: follow_joint_trajectory
-  default: true
+  default: false
   joints:
     - $(var prefix)joint1
 
