--- a/linear_slider_controllers/config/linear_slider_controllers.yaml
+++ b/linear_slider_controllers/config/linear_slider_controllers.yaml
@@ -27,10 +27,10 @@ linear_slider_controller:
         gains: # required for velocity interface
             $(var prefix)joint1:
                 ff_velocity_scale: 1.0
-                # Mock hardware + UR5e
-                p: 100.0
-                i: 0.0
-                d: 0.0
+                # # Mock hardware + UR5e
+                # p: 100.0
+                # i: 0.0
+                # d: 0.0
                 # MOCK HARDWARE  --   TODO: Is this different because of the lack of a transmission interface? The mass of the moving base becomes less significant with our ball screw, which isn't modeled in the URDF.
                 # p: 1000.0
                 # i: 10.0
@@ -41,9 +41,9 @@ linear_slider_controller:
                 # i: 2.0
                 # d: 2.0
 
-                # p: 10.0
-                # i: 2.0
-                # d: 5.0
+                p: 10.0
+                i: 2.0
+                d: 5.0
                 # i_clamp: 1.0
                 
 
