--- a/ur_with_linear_slider_bringup/config/system_controllers.yaml
+++ b/ur_with_linear_slider_bringup/config/system_controllers.yaml
@@ -2,6 +2,9 @@ controller_manager:
   ros__parameters:
     update_rate: 2000 # hz
 
+    limit_switch_state_broadcaster:
+      type: linear_slider_controllers/LimitSwitchStateBroadcaster
+
     linear_slider_controller:
       type: joint_trajectory_controller/JointTrajectoryController
       # TODO: Therefore if the hardware provides only acceleration or velocity states they have to be integrated in the hardware-interface implementation of velocity and position to use these controllers.
@@ -30,34 +33,71 @@ controller_manager:
     force_torque_sensor_broadcaster:
       type: force_torque_sensor_broadcaster/ForceTorqueSensorBroadcaster
 
-# Linear slider controller
-linear_slider_controller:
+joint_state_broadcaster:
   ros__parameters:
     joints:
       - $(var prefix)joint1
-    command_interfaces:
-      - velocity
+      - $(var tf_prefix)shoulder_pan_joint
+      - $(var tf_prefix)shoulder_lift_joint
+      - $(var tf_prefix)elbow_joint
+      - $(var tf_prefix)wrist_1_joint
+      - $(var tf_prefix)wrist_2_joint
+      - $(var tf_prefix)wrist_3_joint
+    
+limit_switch_state_broadcaster:
+  ros__parameters:
     state_interfaces:
-      - position
-      - velocity
-    gains: # required for velocity interface
-      $(var prefix)joint1:
-        ff_velocity_scale: 1.0
-        p: 6.0
-        i: 2.0
-        d: 2.0
-        # i_clamp: 1.0
-    state_publish_rate: 100.0 # defaults to 50
-    action_monitor_rate: 50.0 # defaults to 20
-    allow_partial_joints_goal: false # defaults to false
-    # stop_trajectory_duration: 0.1
-    constraints:
-      #     goal_time: 0.0 # defaults to 0.0 (start immediately)
-      stopped_velocity_tolerance: 0.01 # Defaults to 0.01
-      $(var prefix)joint1:
-        goal: 0.01 # position tolerace (m)
-    #       trajectory: 1.0
-    allow_nonzero_velocity_at_trajectory_end: false
+      - $(var prefix)lim_switch_neg/state
+      - $(var prefix)lim_switch_pos/state
+
+# Linear slider controller # TODO: Load this in from linear_slider package?
+linear_slider_controller:
+    ros__parameters:
+        joints:
+            - $(var prefix)joint1
+
+        command_interfaces:
+            - velocity
+
+        state_interfaces:
+            - position
+            - velocity
+
+        gains: # required for velocity interface
+            $(var prefix)joint1:
+                ff_velocity_scale: 1.0
+                # # Mock hardware + UR5e
+                # p: 100.0
+                # i: 0.0
+                # d: 0.0
+                # MOCK HARDWARE  --   TODO: Is this different because of the lack of a transmission interface? The mass of the moving base becomes less significant with our ball screw, which isn't modeled in the URDF.
+                # p: 1000.0
+                # i: 10.0
+                # d: 1.0
+
+                # REAL HARDWARE
+                # p: 6.0
+                # i: 2.0
+                # d: 2.0
+
+                p: 10.0
+                i: 2.0
+                d: 5.0
+                # i_clamp: 1.0
+
+        state_publish_rate: 100.0 # defaults to 50
+        action_monitor_rate: 50.0 # defaults to 20
+
+        allow_partial_joints_goal: false # defaults to false
+        # stop_trajectory_duration: 0.1
+        constraints:
+            goal_time: 20.0 # defaults to 0.0 (start immediately)
+            stopped_velocity_tolerance: 0.01 # Defaults to 0.01
+            $(var prefix)joint1:
+                goal: 0.05 # position tolerace (m)
+                trajectory: 0.20
+
+        allow_nonzero_velocity_at_trajectory_end: false
 
 # UR Controllers
 joint_trajectory_controller:
