--- a/ur_with_linear_slider_moveit_config/config/joint_limits.yaml
+++ b/ur_with_linear_slider_moveit_config/config/joint_limits.yaml
@@ -9,10 +9,14 @@ default_acceleration_scaling_factor: 0.1
 # Joint limits can be turned off with [has_velocity_limits, has_acceleration_limits]
 joint_limits:
   $(var prefix)joint1:
+    max_position: 0.4
+    min_position: -0.4
     has_velocity_limits: true
-    max_velocity: 0.25
-    has_acceleration_limits: false
-    max_acceleration: 0
+    max_velocity: 0.5
+    has_acceleration_limits: true
+    max_acceleration: 0.2
+    has_jerk_limits: true
+    max_jerk: 10.0
   $(var tf_prefix)elbow_joint:
     has_velocity_limits: true
     max_velocity: 3.1415926535897931
