--- a/linear_slider_bringup/CMakeLists.txt
+++ b/linear_slider_bringup/CMakeLists.txt
@@ -11,6 +11,8 @@ find_package(ament_cmake_python REQUIRED)
 find_package(rclpy REQUIRED)
 find_package(builtin_interfaces REQUIRED)
 find_package(rosgraph_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
 
 
 # Install Python modules
@@ -25,7 +27,8 @@ install(
 install(
   PROGRAMS
   scripts/delay_joint_state_broadcaster_lifecycle_node.py
-  scripts/mock_hardware_limit_switch_state_publisher.py
+  scripts/io_manager_node.py
+  scripts/user_control_node.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
