--- a/linear_slider_controllers/config/linear_slider_controllers.yaml
+++ b/linear_slider_controllers/config/linear_slider_controllers.yaml
@@ -32,18 +32,18 @@ linear_slider_controller:
                 # i: 0.0
                 # d: 0.0
                 # MOCK HARDWARE  --   TODO: Is this different because of the lack of a transmission interface? The mass of the moving base becomes less significant with our ball screw, which isn't modeled in the URDF.
-                # p: 1000.0
-                # i: 10.0
-                # d: 1.0
+                p: 1000.0
+                i: 10.0
+                d: 1.0
 
                 # REAL HARDWARE
                 # p: 6.0
                 # i: 2.0
                 # d: 2.0
 
-                p: 10.0
-                i: 2.0
-                d: 5.0
+                # p: 10.0
+                # i: 2.0
+                # d: 5.0
                 # i_clamp: 1.0
                 
 
@@ -59,7 +59,7 @@ linear_slider_controller:
                 goal: 0.05 # position tolerace (m)
                 trajectory: 0.20
 
-        allow_nonzero_velocity_at_trajectory_end: false
+        allow_nonzero_velocity_at_trajectory_end: true
 
 limit_switch_state_broadcaster:
     ros__parameters:
