--- a/linear_slider_moveit_config/config/linear_slider_servo.yaml
+++ b/linear_slider_moveit_config/config/linear_slider_servo.yaml
@@ -10,7 +10,7 @@ scale:
     linear: 0.6 # Max linear velocity. Meters per publish_period. Unit is [m/s]. Only used for Cartesian commands.
     rotational: 0.3 # Max angular velocity. Rads per publish_period. Unit is [rad/s]. Only used for Cartesian commands.
     # Max joint angular/linear velocity. Rads or Meters per publish period. Only used for joint commands on joint_command_in_topic.
-    joint: 0.01
+    joint: 0.5
 # This is a fudge factor to account for any latency in the system, e.g. network latency or poor low-level
 # controller performance. It essentially increases the timestep when calculating the target pose, to move the target
 # pose farther away. [seconds]
@@ -22,12 +22,12 @@ low_latency_mode: false # Set this to true to publish as soon as an incoming Twi
 
 # What type of topic does your robot driver expect?
 # Currently supported are std_msgs/Float64MultiArray or trajectory_msgs/JointTrajectory
-command_out_type: std_msgs/Float64MultiArray
-# command_out_type: trajectory_msgs/JointTrajectory
+# command_out_type: std_msgs/Float64MultiArray
+command_out_type: trajectory_msgs/JointTrajectory
 
 # What to publish? Can save some bandwidth as most robots only require positions or velocities
 publish_joint_positions: true
-publish_joint_velocities: false
+publish_joint_velocities: true
 publish_joint_accelerations: false
 
 ## Plugins for smoothing outgoing commands
@@ -42,8 +42,8 @@ move_group_name: $(var prefix)manipulator
 planning_frame: $(var prefix)base_link # The MoveIt planning frame. Often 'base_link' or 'world'
 
 ## Other frames
-ee_frame: $(var prefix)tool0 # The name of the end effector link, used to return the EE pose
-robot_link_command_frame: $(var prefix)tool0 # commands must be given in the frame of a robot link. Usually either the base or end effector
+ee_frame_name: $(var prefix)tool0 # The name of the end effector link, used to return the EE pose
+robot_link_command_frame: $(var prefix)base_link     # commands must be given in the frame of a robot link. Usually either the base or end effector
 
 ## Stopping behaviour
 incoming_command_timeout: 0.1 # Stop servoing if X seconds elapse without a new command
@@ -61,7 +61,8 @@ cartesian_command_in_topic: ~/delta_twist_cmds # Topic for incoming Cartesian tw
 joint_command_in_topic: ~/delta_joint_cmds # Topic for incoming joint angle commands
 joint_topic: /joint_states
 status_topic: ~/status # Publish status to this topic
-command_out_topic: /forward_position_controller/commands # Publish outgoing commands here
+# command_out_topic: /forward_position_controller/commands # Publish outgoing commands here
+command_out_topic: /linear_slider_controller/joint_trajectory
 
 ## Collision checking for the entire robot body
 check_collisions: true # Check collisions?
