--- a/linear_slider_moveit_config/config/ompl_planning.yaml
+++ b/linear_slider_moveit_config/config/ompl_planning.yaml
@@ -71,7 +71,7 @@ $(var prefix)manipulator:
   #   allowed_execution_duration_scaling: 5.0 # Increase this value
   #   allowed_goal_duration_margin: 10.0 # Increase this value
   #   execution_duration_monitoring: false
-eit chose RRTConnect as default planner rather than LBKPIECE
+# eit chose RRTConnect as default planner rather than LBKPIECE
   #projection_evaluator: joints(shoulder_pan_joint,shoulder_lift_joint)
   longest_valid_segment_fraction: 0.01
 
