--- a/linear_slider_moveit_config/config/linear_slider_servo.yaml
+++ b/linear_slider_moveit_config/config/linear_slider_servo.yaml
@@ -22,11 +22,11 @@ low_latency_mode: false # Set this to true to publish as soon as an incoming Twi
 
 # What type of topic does your robot driver expect?
 # Currently supported are std_msgs/Float64MultiArray or trajectory_msgs/JointTrajectory
-# command_out_type: std_msgs/Float64MultiArray
-command_out_type: trajectory_msgs/JointTrajectory
+command_out_type: std_msgs/Float64MultiArray
+# command_out_type: trajectory_msgs/JointTrajectory
 
 # What to publish? Can save some bandwidth as most robots only require positions or velocities
-publish_joint_positions: true
+publish_joint_positions: false
 publish_joint_velocities: true
 publish_joint_accelerations: false
 
@@ -34,7 +34,7 @@ publish_joint_accelerations: false
 smoothing_filter_plugin_name: "online_signal_smoothing::ButterworthFilterPlugin"
 
 ## Incoming Joint State properties
-low_pass_filter_coeff: 10.0 # Larger --> trust the filtered data more, trust the measurements less.
+low_pass_filter_coeff: 1.0 # Larger --> trust the filtered data more, trust the measurements less.
 
 ## MoveIt properties
 # move_group_name:  ur_manipulator  # Often 'manipulator' or 'arm'
@@ -61,8 +61,8 @@ cartesian_command_in_topic: ~/delta_twist_cmds # Topic for incoming Cartesian tw
 joint_command_in_topic: ~/delta_joint_cmds # Topic for incoming joint angle commands
 joint_topic: /joint_states
 status_topic: ~/status # Publish status to this topic
-# command_out_topic: /forward_position_controller/commands # Publish outgoing commands here
-command_out_topic: /linear_slider_controller/joint_trajectory
+command_out_topic: /linear_slider_forward_velocity_controller/commands # Publish outgoing commands here
+# command_out_topic: /linear_slider_controller/joint_trajectory
 
 ## Collision checking for the entire robot body
 check_collisions: true # Check collisions?
