attempted to do joint_trajectory servoing. don't think it's gonna work

--- a/linear_slider_moveit_config/config/linear_slider_servo.yaml
+++ b/linear_slider_moveit_config/config/linear_slider_servo.yaml
@@ -26,7 +26,7 @@ low_latency_mode: false # Set this to true to publish as soon as an incoming Twi
 command_out_type: trajectory_msgs/JointTrajectory
 
 # What to publish? Can save some bandwidth as most robots only require positions or velocities
-publish_joint_positions: true
+publish_joint_positions: false
 publish_joint_velocities: true
 publish_joint_accelerations: false
 
@@ -34,7 +34,7 @@ publish_joint_accelerations: false
 smoothing_filter_plugin_name: "online_signal_smoothing::ButterworthFilterPlugin"
 
 ## Incoming Joint State properties
-low_pass_filter_coeff: 10.0 # Larger --> trust the filtered data more, trust the measurements less.
+low_pass_filter_coeff: 0.0 # Larger --> trust the filtered data more, trust the measurements less.
 
 ## MoveIt properties
 # move_group_name:  ur_manipulator  # Often 'manipulator' or 'arm'
