--- a/linear_slider_description/config/joint_limits.yaml
+++ b/linear_slider_description/config/joint_limits.yaml
@@ -2,8 +2,8 @@
 
 # For beginners, we downscale velocity and acceleration limits.
 # You can always specify higher scaling factors (<= 1.0) in your motion requests.  # Increase the values below to 1.0 to always move at maximum speed.
-default_velocity_scaling_factor: 0.1
-default_acceleration_scaling_factor: 0.1
+default_velocity_scaling_factor: 1.0
+default_acceleration_scaling_factor: 1.0
 
 # Specific joint properties can be changed with the keys [max_position, min_position, max_velocity, max_acceleration]
 # Joint limits can be turned off with [has_velocity_limits, has_acceleration_limits]
@@ -14,6 +14,7 @@ joint_limits:
         has_velocity_limits: true
         max_velocity: 0.08333333333333334 # 1000 rpm for the servo motor. See ClearPath datasheet for speed limits.
         has_acceleration_limits: true
-        max_acceleration: 0.2
+        max_acceleration: 0.05 # TODO: Figure out loop speed, convert from rpm/s to m/s^2 
+        # ros2 topic hz joint_states
         has_jerk_limits: true
         max_jerk: 10.0
